--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -554,14 +554,174 @@ video {
   --tw-contain-style:  ;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.absolute {
+  position: absolute;
 }
 
-.text-red-500 {
+.relative {
+  position: relative;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-\[30px\] {
+  margin-top: 30px;
+}
+
+.flex {
+  display: flex;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-\[750px\] {
+  height: 750px;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-\[90px\] {
+  height: 90px;
+}
+
+.h-\[900px\] {
+  height: 900px;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-\[64px\] {
+  gap: 64px;
+}
+
+.gap-\[77px\] {
+  gap: 77px;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.bg-\[\#F7F8FB\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 248 251 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FCB623\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 182 35 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.px-\[50px\] {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.py-\[21px\] {
+  padding-top: 21px;
+  padding-bottom: 21px;
+}
+
+.pl-\[170px\] {
+  padding-left: 170px;
+}
+
+.pr-\[54px\] {
+  padding-right: 54px;
+}
+
+.pt-\[47px\] {
+  padding-top: 47px;
+}
+
+.text-\[24px\] {
+  font-size: 24px;
+}
+
+.text-\[64px\] {
+  font-size: 64px;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.font-extrabold {
+  font-weight: 800;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
+.font-normal {
+  font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.text-\[\#111227\] {
   --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
+  color: rgb(17 18 39 / var(--tw-text-opacity));
 }
 
 /* npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --watch */
+
+.raleway-font {
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  /* font-weight: 400; */
+  font-style: normal;
+}
+
+.banner{
+  background-image: url('../images/banner_bg.png');
+  background-repeat: no-repeat;
+  background-position: right, bottom;
+}
+
+.hover\:text-\[\#FCB623\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(252 182 35 / var(--tw-text-opacity));
+}
