--- a/assets/carousel/carousel.css
+++ b/assets/carousel/carousel.css
@@ -1,39 +1,85 @@
-.swiper {
-	max-width: 1156px;
-	width: 100%;
-	height: 100%;
-  }
-
-  .swiper-slide {
-	text-align: center;
-	font-size: 18px;
-	background: #fff;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-  }
-
-  .swiper-button-next:after{
-	content: url('../images/right_slide.svg');
-  }
-  .swiper-button-prev:after{
-	content: url('../images/left_slide.svg');
-  }
-
-  @media (max-width: 760px) {
-	.swiper-button-next {
-	  right: 20px;
-	  transform: rotate(90deg);
+	.team_carousel_container {
+		max-width: 1156px;
+		width: 100%;
 	}
 
-	.swiper-button-prev {
-	  left: 20px;
-	  transform: rotate(90deg);
+	.swiper {
+		/* width: 100%;
+		height: 100%; */
 	}
-	.swiper-button-next:after{
+
+	.swiper-slide {
+		text-align: center;
+		font-size: 18px;
+		background: #fff;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0;
+		padding: 0;
+	}
+
+	.swiper-button-next:after {
+		content: url('../images/right_slide.svg');
+	}
+
+	.swiper-button-prev:after {
+		content: url('../images/left_slide.svg');
+	}
+
+	@media (max-width: 1280px){
+		.team_carousel_container {
+			width: 100%;
+		}
+		.swiper-button-next {
+			display: none;
+		}
+	
+		.swiper-button-prev {
+			display: none;
+		}
+	
+		.swiper-button-next:after {
+			display: none;
+		}
+	
+		.swiper-button-prev:after {
+			display: none;
+		}
+	}
+	@media (max-width: 1024px) {
+
+
+	}
+
+	@media (max-width: 760px) {}
+
+	.modal {
 		display: none;
-	  }
-	  .swiper-button-prev:after{
-		display: none;
-	  }
-  }
+		position: fixed;
+		z-index: 20;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: rgba(0, 0, 0, 0.5);
+		justify-content: center;
+		align-items: center;
+	}
+
+	.modal-content {
+		background: #fff;
+		padding: 20px;
+		position: relative;
+		width: 80%;
+		max-width: 800px;
+		text-align: center;
+	}
+
+	.modal-content .close {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		cursor: pointer;
+		font-size: 24px;
+	}
