--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -554,6 +554,44 @@ video {
   --tw-contain-style:  ;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -562,32 +600,181 @@ video {
   position: relative;
 }
 
-.-z-10 {
-  z-index: -10;
+.-right-10 {
+  right: -2.5rem;
+}
+
+.bottom-\[50\%\] {
+  bottom: 50%;
+}
+
+.top-\[50\%\] {
+  top: 50%;
 }
 
 .z-10 {
   z-index: 10;
 }
 
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+
+.col-span-5 {
+  grid-column: span 5 / span 5;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-9 {
+  margin-bottom: 2.25rem;
+}
+
+.mb-\[44px\] {
+  margin-bottom: 44px;
+}
+
+.ml-10 {
+  margin-left: 2.5rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-11 {
+  margin-top: 2.75rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-\[106px\] {
+  margin-top: 106px;
+}
+
+.mt-\[144px\] {
+  margin-top: 144px;
+}
+
+.mt-\[197px\] {
+  margin-top: 197px;
+}
+
+.mt-\[206px\] {
+  margin-top: 206px;
 }
 
 .mt-\[30px\] {
   margin-top: 30px;
 }
 
+.mt-\[50px\] {
+  margin-top: 50px;
+}
+
+.mt-\[52px\] {
+  margin-top: 52px;
+}
+
+.mt-\[54px\] {
+  margin-top: 54px;
+}
+
+.mt-\[59px\] {
+  margin-top: 59px;
+}
+
+.mt-\[74px\] {
+  margin-top: 74px;
+}
+
+.mt-\[78px\] {
+  margin-top: 78px;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
 .flex {
   display: flex;
 }
 
-.h-20 {
-  height: 5rem;
+.hidden {
+  display: none;
 }
 
-.h-\[750px\] {
-  height: 750px;
+.h-\[200px\] {
+  height: 200px;
+}
+
+.h-\[222px\] {
+  height: 222px;
+}
+
+.h-\[304px\] {
+  height: 304px;
+}
+
+.h-\[399px\] {
+  height: 399px;
+}
+
+.h-\[50px\] {
+  height: 50px;
+}
+
+.h-\[55px\] {
+  height: 55px;
 }
 
 .h-fit {
@@ -595,49 +782,233 @@ video {
   height: fit-content;
 }
 
-.h-\[90px\] {
-  height: 90px;
+.h-full {
+  height: 100%;
 }
 
-.h-\[900px\] {
-  height: 900px;
+.h-screen {
+  height: 100vh;
+}
+
+.w-0 {
+  width: 0px;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-\[162px\] {
+  width: 162px;
+}
+
+.w-\[208px\] {
+  width: 208px;
+}
+
+.w-\[302px\] {
+  width: 302px;
+}
+
+.w-\[345px\] {
+  width: 345px;
+}
+
+.w-\[350px\] {
+  width: 350px;
+}
+
+.w-\[380px\] {
+  width: 380px;
+}
+
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-\[80vw\] {
+  width: 80vw;
+}
+
+.w-\[95px\] {
+  width: 95px;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .w-full {
   width: 100%;
 }
 
+.max-w-\[1920px\] {
+  max-width: 1920px;
+}
+
+.max-w-\[758px\] {
+  max-width: 758px;
+}
+
+.max-w-\[787px\] {
+  max-width: 787px;
+}
+
+.max-w-\[912px\] {
+  max-width: 912px;
+}
+
+.max-w-\[956px\] {
+  max-width: 956px;
+}
+
+.max-w-\[964px\] {
+  max-width: 964px;
+}
+
+.flex-grow {
+  flex-grow: 1;
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.grid-cols-7 {
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
+.justify-end {
+  justify-content: flex-end;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-20 {
+  gap: 5rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .gap-6 {
   gap: 1.5rem;
 }
 
-.gap-\[64px\] {
-  gap: 64px;
+.gap-7 {
+  gap: 1.75rem;
 }
 
-.gap-\[77px\] {
-  gap: 77px;
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-9 {
+  gap: 2.25rem;
+}
+
+.gap-\[21px\] {
+  gap: 21px;
+}
+
+.gap-\[38px\] {
+  gap: 38px;
+}
+
+.gap-\[47px\] {
+  gap: 47px;
+}
+
+.gap-\[70px\] {
+  gap: 70px;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
 .rounded-full {
   border-radius: 9999px;
 }
 
-.bg-\[\#F7F8FB\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 248 251 / var(--tw-bg-opacity));
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-b-md {
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+
+.rounded-t-2xl {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
+.rounded-t-lg {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
+.border-\[\#111227\]\/15 {
+  border-color: rgb(17 18 39 / 0.15);
+}
+
+.border-\[\#FCB623\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(252 182 35 / var(--tw-border-opacity));
 }
 
 .bg-\[\#FCB623\] {
@@ -645,9 +1016,64 @@ video {
   background-color: rgb(252 182 35 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
+.bg-black\/40 {
+  background-color: rgb(0 0 0 / 0.4);
+}
+
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .px-\[50px\] {
@@ -655,34 +1081,96 @@ video {
   padding-right: 50px;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .py-\[21px\] {
   padding-top: 21px;
   padding-bottom: 21px;
 }
 
-.pl-\[170px\] {
-  padding-left: 170px;
+.pb-12 {
+  padding-bottom: 3rem;
 }
 
-.pr-\[54px\] {
-  padding-right: 54px;
+.pl-\[50px\] {
+  padding-left: 50px;
 }
 
-.pt-\[47px\] {
-  padding-top: 47px;
+.pr-\[30px\] {
+  padding-right: 30px;
+}
+
+.pt-\[44px\] {
+  padding-top: 44px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-\[13px\] {
+  font-size: 13px;
+}
+
+.text-\[17px\] {
+  font-size: 17px;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
 }
 
 .text-\[24px\] {
   font-size: 24px;
 }
 
-.text-\[64px\] {
-  font-size: 64px;
+.text-\[32px\] {
+  font-size: 32px;
+}
+
+.text-\[37px\] {
+  font-size: 37px;
+}
+
+.text-\[45px\] {
+  font-size: 45px;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .font-extrabold {
@@ -693,6 +1181,10 @@ video {
   font-weight: 300;
 }
 
+.font-medium {
+  font-weight: 500;
+}
+
 .font-normal {
   font-weight: 400;
 }
@@ -701,9 +1193,33 @@ video {
   font-weight: 600;
 }
 
+.italic {
+  font-style: italic;
+}
+
 .text-\[\#111227\] {
   --tw-text-opacity: 1;
   color: rgb(17 18 39 / var(--tw-text-opacity));
+}
+
+.text-\[\#FCB623\] {
+  --tw-text-opacity: 1;
+  color: rgb(252 182 35 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.duration-300 {
+  transition-duration: 300ms;
 }
 
 /* npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --watch */
@@ -718,10 +1234,399 @@ video {
 .banner{
   background-image: url('../images/banner_bg.png');
   background-repeat: no-repeat;
-  background-position: right, bottom;
+  background-position: right bottom;
+}
+
+.team_name_bg{
+  background-image: url('../images/team_name_bg.png');
+  background-size: cover;
+}
+
+.client_stats_bg{
+  background-image: url('../images/client_stats_bg.png');
+  background-repeat: no-repeat;
+  background-position: left bottom;
+}
+
+.middle_bg{
+  background-image: url('../images/middle_bg.png');
+  background-repeat: no-repeat;
+  background-position:  center;
+}
+
+.tab-content {
+  display: none;
+}
+
+.tab-content.active {
+  display: block;
+}
+
+@media screen and (max-width: 1024px) {
+  .banner{
+    background-image: url('../images/mobile_banner_bg.svg');
+    background-repeat: no-repeat;
+    background-position: right, bottom;
+    background-size: contain;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .banner{
+    background-position: right top;
+    background-size: auto;
+  }
+}
+
+.hover\:border-\[\#FCB623\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(252 182 35 / var(--tw-border-opacity));
 }
 
 .hover\:text-\[\#FCB623\]:hover {
   --tw-text-opacity: 1;
   color: rgb(252 182 35 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .sm\:h-\[405px\] {
+    height: 405px;
+  }
+
+  .sm\:w-10 {
+    width: 2.5rem;
+  }
+
+  .sm\:w-\[505px\] {
+    width: 505px;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .md\:mb-6 {
+    margin-bottom: 1.5rem;
+  }
+
+  .md\:ml-7 {
+    margin-left: 1.75rem;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .md\:mt-12 {
+    margin-top: 3rem;
+  }
+
+  .md\:mt-\[174px\] {
+    margin-top: 174px;
+  }
+
+  .md\:mt-\[186px\] {
+    margin-top: 186px;
+  }
+
+  .md\:mt-\[206px\] {
+    margin-top: 206px;
+  }
+
+  .md\:mt-\[71px\] {
+    margin-top: 71px;
+  }
+
+  .md\:mt-\[79px\] {
+    margin-top: 79px;
+  }
+
+  .md\:mt-\[92px\] {
+    margin-top: 92px;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:grid {
+    display: grid;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:h-\[768px\] {
+    height: 768px;
+  }
+
+  .md\:h-full {
+    height: 100%;
+  }
+
+  .md\:w-auto {
+    width: auto;
+  }
+
+  .md\:max-w-\[277px\] {
+    max-width: 277px;
+  }
+
+  .md\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .md\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .md\:gap-8 {
+    gap: 2rem;
+  }
+
+  .md\:gap-\[94px\] {
+    gap: 94px;
+  }
+
+  .md\:bg-\[\#F7F8FB\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(247 248 251 / var(--tw-bg-opacity));
+  }
+
+  .md\:p-6 {
+    padding: 1.5rem;
+  }
+
+  .md\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .md\:text-\[20px\] {
+    font-size: 20px;
+  }
+
+  .md\:text-\[24px\] {
+    font-size: 24px;
+  }
+
+  .md\:text-\[45px\] {
+    font-size: 45px;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .lg\:inline-block {
+    display: inline-block;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:h-\[381px\] {
+    height: 381px;
+  }
+
+  .lg\:h-\[534px\] {
+    height: 534px;
+  }
+
+  .lg\:h-\[74px\] {
+    height: 74px;
+  }
+
+  .lg\:w-\[404px\] {
+    width: 404px;
+  }
+
+  .lg\:w-\[463px\] {
+    width: 463px;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:items-end {
+    align-items: flex-end;
+  }
+
+  .lg\:items-center {
+    align-items: center;
+  }
+
+  .lg\:justify-end {
+    justify-content: flex-end;
+  }
+
+  .lg\:gap-\[114px\] {
+    gap: 114px;
+  }
+
+  .lg\:p-6 {
+    padding: 1.5rem;
+  }
+
+  .lg\:px-\[50px\] {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .lg\:py-\[21px\] {
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+
+  .lg\:text-\[24px\] {
+    font-size: 24px;
+  }
+
+  .lg\:text-\[64px\] {
+    font-size: 64px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:mb-\[106px\] {
+    margin-bottom: 106px;
+  }
+
+  .xl\:grid {
+    display: grid;
+  }
+
+  .xl\:grid-cols-8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+  }
+
+  .xl\:flex-nowrap {
+    flex-wrap: nowrap;
+  }
+
+  .xl\:justify-between {
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .\32xl\:mt-\[78px\] {
+    margin-top: 78px;
+  }
+
+  .\32xl\:h-\[1080px\] {
+    height: 1080px;
+  }
+
+  .\32xl\:h-\[325px\] {
+    height: 325px;
+  }
+
+  .\32xl\:h-\[72px\] {
+    height: 72px;
+  }
+
+  .\32xl\:w-\[507px\] {
+    width: 507px;
+  }
+
+  .\32xl\:w-\[72px\] {
+    width: 72px;
+  }
+
+  .\32xl\:w-auto {
+    width: auto;
+  }
+
+  .\32xl\:gap-6 {
+    gap: 1.5rem;
+  }
+
+  .\32xl\:gap-\[64px\] {
+    gap: 64px;
+  }
+
+  .\32xl\:gap-\[77px\] {
+    gap: 77px;
+  }
+
+  .\32xl\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .\32xl\:px-\[170px\] {
+    padding-left: 170px;
+    padding-right: 170px;
+  }
+
+  .\32xl\:px-\[50px\] {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .\32xl\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .\32xl\:py-\[21px\] {
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+
+  .\32xl\:pl-\[170px\] {
+    padding-left: 170px;
+  }
+
+  .\32xl\:pr-\[54px\] {
+    padding-right: 54px;
+  }
+
+  .\32xl\:pt-\[47px\] {
+    padding-top: 47px;
+  }
+
+  .\32xl\:text-\[20px\] {
+    font-size: 20px;
+  }
+
+  .\32xl\:text-\[24px\] {
+    font-size: 24px;
+  }
+
+  .\32xl\:text-\[32px\] {
+    font-size: 32px;
+  }
+
+  .\32xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
 }
