complete project, remain carousel

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -29,6 +29,7 @@
 }
 .middle_bg{
   background-image: url('../images/middle_bg.png');
+  background-size: cover;
   background-repeat: no-repeat;
   background-position:  center;
 }
