--- a/assets/carousel/carousel.css
+++ b/assets/carousel/carousel.css
@@ -21,10 +21,12 @@
 
 	.swiper-button-next:after {
 		content: url('../images/right_slide.svg');
+		margin-top: -130px;
 	}
 
 	.swiper-button-prev:after {
 		content: url('../images/left_slide.svg');
+		margin-top: -130px;
 	}
 
 	@media (max-width: 1280px){
