--- a/assets/team_member_carousel/team_member_carousel.css
+++ b/assets/team_member_carousel/team_member_carousel.css
@@ -19,7 +19,7 @@ body {
 }
 
 .wrapper i {
-    top: 50%;
+    top: 35%;
     height: 50px;
     width: 50px;
     cursor: pointer;
@@ -138,6 +138,10 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+    .wrapper{
+        width: 100%;
+        margin: 0 auto;
+    }
     .wrapper .carousel {
         grid-auto-columns: 100%;
     }
